data/derived/comb/progs/unify/prog2262.ml.out
Characters 78-79:
  if(converted = (listReverse w)) then true
                              ^
Error: This expression has type string but an expression was expected of type
         'a list
